--- a/docker/Dockerfile.gitlab-ci-24.04
+++ b/docker/Dockerfile.gitlab-ci-24.04
@@ -50,3 +50,5 @@ RUN git clone https://github.com/terralang/terra.git && \
     cmake -DCMAKE_INSTALL_PREFIX=/usr/local/terra18 .. && \
     make install -j8 && \
     rm -rf terra
+
+RUN pip3 install --break-system-packages 'pre-commit>=4.1,<5'
