--- a/docker/Dockerfile.gitlab-ci-20.04
+++ b/docker/Dockerfile.gitlab-ci-20.04
@@ -13,7 +13,7 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:pypy/ppa -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential pkg-config gfortran git time wget curl ccache \
+      build-essential autoconf pkg-config gfortran git time wget curl ccache \
       libpython3-dev python3-pip pypy3 \
       g++-9 g++-10 g++-11 \
       gfortran-9 gfortran-10 gfortran-11 \
