--- a/docker/Dockerfile.gitlab-ci-22.04
+++ b/docker/Dockerfile.gitlab-ci-22.04
@@ -12,7 +12,7 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:ubuntu-toolchain-r/test -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential pkg-config gfortran git time wget curl ccache \
+      build-essential autoconf pkg-config gfortran git time wget curl ccache \
       libpython3-dev python3-pip pypy3 \
       g++-10 g++-11 g++-12 \
       gfortran-10 gfortran-11 gfortran-12 \
@@ -30,9 +30,7 @@ RUN dpkg --add-architecture i386 && \
 
 RUN pip3 install --upgrade 'pip>=22,<23' && \
     pip3 install --upgrade 'setuptools>=62,<63' 'setuptools_rust>=1.3,<1.4' && \
-    pip3 install cffi github3.py 'numpy>=1.22,<1.23' 'cryptography>=37,<38' 'pandas>=1.4,<1.5' 'h5py>=3.10,<3.11' 'notebook>=6.4,<6.5' 'mypy>=1.7,<1.8' joblib daff tabulate
-
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-toolchain 1.84.0 -y
+    pip3 install 'cffi>=1.16,<1.17' github3.py 'numpy>=1.22,<1.23' 'cryptography>=37,<38' 'pandas>=1.4,<1.5' 'h5py>=3.10,<3.11' 'notebook>=6.4,<6.5' 'mypy>=1.7,<1.8' joblib daff tabulate
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-toolchain 1.84.0 -y
 
