--- a/docker/Dockerfile.gitlab-ci-24.04
+++ b/docker/Dockerfile.gitlab-ci-24.04
@@ -12,7 +12,7 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:ubuntu-toolchain-r/test -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential pkg-config gfortran git time wget curl ccache \
+      build-essential autoconf pkg-config gfortran git time wget curl ccache \
       libpython3-dev python3-pip pypy3 \
       python3-cffi python3-numpy python3-notebook python3-mypy \
       g++-10 g++-11 g++-12 \
