--- a/docker/Dockerfile.gitlab-ci-hpcsdk
+++ b/docker/Dockerfile.gitlab-ci-hpcsdk
@@ -1,6 +1,6 @@
 # Build Image for Gitlab CI
 
-FROM nvcr.io/nvidia/nvhpc:22.11-devel-cuda_multi-ubuntu20.04
+FROM nvcr.io/nvidia/nvhpc:25.1-devel-cuda_multi-ubuntu22.04
 
 MAINTAINER Sean Treichler <sean@nvidia.com>
 
@@ -20,7 +20,7 @@ RUN dpkg --add-architecture i386 && \
 
 RUN pip3 install --upgrade 'pip>=22,<23' && \
     pip3 install --upgrade 'setuptools>=62,<63' 'setuptools_rust>=1.3,<1.4' && \
-    pip3 install cffi github3.py 'numpy>=1.22,<1.23' 'cryptography>=37,<38' 'pandas>=1.4,<1.5' 'h5py>=3.10,<3.11' 'notebook>=6.4,<6.5' 'mypy>=1.7,<1.8' joblib daff tabulate
+    pip3 install 'cffi>=1.16,<1.17' github3.py 'numpy>=1.22,<1.23' 'cryptography>=37,<38' 'pandas>=1.4,<1.5' 'h5py>=3.10,<3.11' 'notebook>=6.4,<6.5' 'mypy>=1.7,<1.8' joblib daff tabulate
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-toolchain 1.84.0 -y
 
@@ -34,10 +34,10 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --defau
 # delete a bunch of stuff we don't need (yet) - NOTE: this is only useful
 #  if you use docker-squash on the resulting image (docker build --squash
 #  only squashes the new layers we add here); see instructions below
-RUN rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/22.11/comm_libs/ && \
-    rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/22.11/math_libs/ && \
-    rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/22.11/profilers/ && \
-    rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/22.11/examples/
+RUN rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/25.1/comm_libs/ && \
+    rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/25.1/math_libs/ && \
+    rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/25.1/profilers/ && \
+    rm -rf /opt/nvidia/hpc_sdk/Linux_x86_64/25.1/examples/
 
 # process to squash the image:
 # pip3 install docker-squash
