--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -8,7 +8,7 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:pypy/ppa -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential git time wget \
+      build-essential autoconf git time wget \
       libpython3-dev python3-pip pypy3 \
       g++-9 g++-10 g++-11 \
       gfortran-9 gfortran-10 gfortran-11 \
