--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -60,4 +60,14 @@ RUN wget -nv https://developer.download.nvidia.com/compute/cuda/12.8.0/local_ins
     rm ./cuda_12.8.0_570.86.10_linux.run
 RUN rm /usr/local/cuda
 
+
+RUN wget https://download.open-mpi.org/release/open-mpi/v5.0/openmpi-5.0.5.tar.gz && \
+    echo "8b3f8d3eb10ad0e9a4fb94ab10a574e4fde6e32c  openmpi-5.0.5.tar.gz" | shasum --check && \
+    tar -xf openmpi-5.0.5.tar.gz && \
+		mkdir -p openmpi-5.0.5/build /usr/local/ompi && \
+    (cd openmpi-5.0.5/build && \
+    ../configure --prefix=/usr/local/ompi --enable-mpirun-prefix-by-default && \
+    make -j install) && \
+    rm -rf openmpi-5.0.5.tar.gz openmpi-5.0.5
+
 RUN apt-get clean
