--- a/docker/Dockerfile.gitlab-ci-24.04
+++ b/docker/Dockerfile.gitlab-ci-24.04
@@ -52,3 +52,12 @@ RUN git clone https://github.com/terralang/terra.git && \
     rm -rf terra
 
 RUN pip3 install --break-system-packages 'pre-commit>=4.1,<5'
+
+RUN wget https://download.open-mpi.org/release/open-mpi/v5.0/openmpi-5.0.5.tar.gz && \
+    echo "5cbefa0780b84f4126743c40cdd6a334b2f0574cd7fd95050fb1ac0ddbb7f0b8  openmpi-5.0.5.tar.gz" | shasum --check && \
+    tar -xf openmpi-5.0.5.tar.gz && \
+    mkdir -p openmpi-5.0.5/build /usr/local/ompi && \
+    (cd openmpi-5.0.5/build && \
+    ../configure --prefix=/usr/local/ompi --enable-mpirun-prefix-by-default && \
+    make -j install) && \
+    rm -rf openmpi-5.0.5.tar.gz openmpi-5.0.5
