--- a/realm/cmake/RealmConfig.cmake.in
+++ b/realm/cmake/RealmConfig.cmake.in
@@ -73,7 +73,8 @@ endif()
 
 include(CMakeFindDependencyMacro)
 # Find all the static library dependencies needed
-# TODO(cperry): need to enumerate all the dependencies linked in for the static build
+# Use the installed Find* modules as a last resort for dependencies
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
 if(${CMAKE_FIND_PACKAGE_NAME}_static_FOUND)
   foreach (_dep IN LISTS @REALM_STATIC_DEPENDS@)
    find_dependency(${_dep})
